--- a/style.css
+++ b/style.css
@@ -1,17 +1,31 @@
 body {
     font-family: Arial;
+    background-color: aliceblue;
+    padding: 40px 0;
 }
+
 h1 {
     font-size: 36px;
 }
+
 h2 {
     font-size: 28px;
 }
+
 span {
     color: grey;
     
 }
+
 img {
     width: 150px;
     height: 150px;
+}
+
+Section, 
+header {
+    padding: 10px 60px 20px 60px;
+    background-color: white;
+    width: 960px;
+    margin: 0 auto;
 }
