added display flex

--- a/style.css
+++ b/style.css
@@ -29,3 +29,9 @@ header {
     width: 960px;
     margin: 0 auto;
 }
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
