--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ h2 {
     font-size: 28px;
 }
 
+h3 {
+    margin-top: 5px
+}
+
 span {
     color: grey;
     
@@ -66,4 +70,19 @@ header li {
 
 .hobbies li {
     width: 50%;
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 40px;
+}
+
+.hobbies div {
+    margin-left: 20px;
+}
+
+.hobbies p {
+    color:grey;
+}
+
+p {
+    line-height: 1.5;
 }
